--- a/SMS Dubai Roads/en.lproj/MainStoryboard.storyboard
+++ b/SMS Dubai Roads/en.lproj/MainStoryboard.storyboard
@@ -383,6 +383,9 @@ Upgrade now </string>
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="621"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="kaT-jx-QAE" id="gus-Az-cU1"/>
+                                </connections>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
