--- a/Traffic_Widget/MainInterface.storyboard
+++ b/Traffic_Widget/MainInterface.storyboard
@@ -3,44 +3,13 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="cwh-vc-ff4">
-            <objects>
-                <viewController id="M4Y-Lb-cyx" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Y2s-on-jzc"/>
-                        <viewControllerLayoutGuide type="bottom" id="vpe-Pp-zun"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bng-h3-MWk">
-                                <rect key="frame" x="0.0" y="40" width="320" height="280"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </webView>
-                        </subviews>
-                    </view>
-                    <extendedEdge key="edgesForExtendedLayout"/>
-                    <nil key="simulatedStatusBarMetrics"/>
-                    <nil key="simulatedTopBarMetrics"/>
-                    <nil key="simulatedBottomBarMetrics"/>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="568"/>
-                    <connections>
-                        <outlet property="trafficwidgetview" destination="bng-h3-MWk" id="N0d-4h-WWe"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vXp-U4-Rya" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="516" y="285"/>
-        </scene>
         <!--Today View Controller-->
         <scene sceneID="d18-vE-3lh">
             <objects>
-                <viewController id="6uh-xH-jwE" customClass="TodayViewController" customModule="Traffic_Widget" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="6uh-xH-jwE" customClass="TodayViewController" customModule="Traffic_Widget" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Rrw-Ja-Nk7"/>
                         <viewControllerLayoutGuide type="bottom" id="ZJS-JI-bUB"/>
@@ -49,38 +18,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Dubai" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcN-lo-r42">
-                                <rect key="frame" x="20" y="20" width="280" height="34"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ibg-ix-d9Z">
+                                <rect key="frame" x="20" y="61" width="191" height="197"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="61D-lQ-vb3"/>
-                                    <constraint firstAttribute="width" constant="280" id="w7D-Gt-Yoo"/>
+                                    <constraint firstAttribute="height" constant="197" id="AJ9-5t-l6z"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0iL-Ee-oSt">
-                                <rect key="frame" x="0.0" y="62" width="320" height="248"/>
-                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="320" id="U7p-yt-izx"/>
-                                    <constraint firstAttribute="height" constant="248" id="Xe3-ow-Nyf"/>
-                                </constraints>
-                                <connections>
-                                    <outlet property="delegate" destination="6uh-xH-jwE" id="XKf-PH-FmJ"/>
-                                </connections>
-                            </webView>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="GcN-lo-r42" firstAttribute="top" secondItem="Rrw-Ja-Nk7" secondAttribute="bottom" id="6qi-a2-jGN"/>
-                            <constraint firstItem="0iL-Ee-oSt" firstAttribute="top" secondItem="GcN-lo-r42" secondAttribute="bottom" constant="8" id="ECP-jZ-OP9"/>
-                            <constraint firstItem="GcN-lo-r42" firstAttribute="centerX" secondItem="dbu-sp-sub" secondAttribute="centerX" id="NZh-Lp-wkE"/>
-                            <constraint firstItem="0iL-Ee-oSt" firstAttribute="centerX" secondItem="dbu-sp-sub" secondAttribute="centerX" id="Z5E-Xl-NwT"/>
+                            <constraint firstItem="ZJS-JI-bUB" firstAttribute="top" secondItem="Ibg-ix-d9Z" secondAttribute="bottom" constant="310" id="2Ku-Er-GHg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ibg-ix-d9Z" secondAttribute="trailing" constant="93" id="FFU-fh-oUg"/>
+                            <constraint firstItem="Ibg-ix-d9Z" firstAttribute="leading" secondItem="dbu-sp-sub" secondAttribute="leadingMargin" constant="4" id="ZpA-LR-5A5"/>
+                            <constraint firstItem="Ibg-ix-d9Z" firstAttribute="top" secondItem="Rrw-Ja-Nk7" secondAttribute="bottom" constant="41" id="qLO-DR-tV3"/>
                         </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <outlet property="trafficwidgetview" destination="0iL-Ee-oSt" id="Zbp-we-qKi"/>
+                        <outlet property="containerView" destination="Ibg-ix-d9Z" id="yyB-oZ-vMs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="17G-SI-j50" userLabel="First Responder" sceneMemberID="firstResponder"/>
